--- a/.dockerignore
+++ b/.dockerignore
@@ -1,2 +1,11 @@
-docker-compose.yml
 Dockerfile
+.ignore
+/node_modules
+/public/hot
+/public/storage
+/storage/*.key
+/vendor
+.env
+.phpunit.result.cache
+npm-debug.log
+yarn-error.log
