--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,8 @@
 version: '3'
 services:
   laravel:
-    build: .
+    # build: .
+    image: laravel-test:latest
     networks:
       - local
     ports:
